fix(ui): Fix sidebar scrolling and lock body overflow

--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -76,7 +76,8 @@
   }
 </style>
 
-<body class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white min-h-screen flex transition-colors duration-300">
+<body
+  class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white h-screen overflow-hidden flex transition-colors duration-300">
 
   <!-- LEFT SIDEBAR -->
   <aside class="hidden md:flex flex-col w-64 p-6 border-r border-gray-200 dark:border-gray-800">
@@ -88,7 +89,7 @@
   </aside>
 
   <!-- MAIN FEED -->
-  <main class="flex-1 max-w-2xl mx-auto border-x border-gray-200 dark:border-gray-800">
+  <main class="flex-1 max-w-2xl mx-auto border-x border-gray-200 dark:border-gray-800 overflow-y-auto">
 
     <!-- FEED TABS -->
     <div
