--- a/src/pages/notifications.html
+++ b/src/pages/notifications.html
@@ -34,7 +34,8 @@
     </script>
 </head>
 
-<body class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white min-h-screen flex transition-colors duration-300">
+<body
+    class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white h-screen overflow-hidden flex transition-colors duration-300">
 
     <!-- LEFT SIDEBAR -->
     <aside class="hidden md:flex flex-col w-64 p-6 border-r border-gray-200 dark:border-gray-800">
