--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -41,7 +41,8 @@
     </script>
 </head>
 
-<body class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white min-h-screen flex transition-colors duration-300">
+<body
+    class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white h-screen overflow-hidden flex transition-colors duration-300">
 
     <!-- LEFT SIDEBAR -->
     <aside class="hidden md:flex flex-col w-64 p-6 border-r border-gray-200 dark:border-gray-800 sticky top-0 h-screen">
@@ -102,7 +103,7 @@
     </style>
 
     <!-- MAIN AREA -->
-    <main class="flex-1 max-w-2xl mx-auto border-x border-gray-200 dark:border-gray-800 min-h-screen">
+    <main class="flex-1 max-w-2xl mx-auto border-x border-gray-200 dark:border-gray-800 overflow-y-auto">
 
 
 
