--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -31,7 +31,8 @@
 
 
 
-<body class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white min-h-screen flex transition-colors duration-300">
+<body
+    class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white h-screen overflow-hidden flex transition-colors duration-300">
 
     <!-- LEFT SIDEBAR -->
     <aside class="hidden md:flex flex-col w-64 p-6 border-r border-gray-200 dark:border-gray-800">
@@ -43,7 +44,7 @@
     </aside>
 
     <!-- MAIN AREA -->
-    <main class="flex-1 flex flex-col max-w-2xl mx-auto w-full p-6">
+    <main class="flex-1 flex flex-col max-w-2xl mx-auto w-full p-6 overflow-y-auto">
 
         <!-- DYNAMIC CONTENT CONTAINER -->
         <div id="centerContent" class="h-full"></div>
