--- a/src/pages/post.html
+++ b/src/pages/post.html
@@ -126,6 +126,9 @@
                 </div>
             ` : ''}
 
+            <!-- GIF -->
+            ${post.gif ? `<div class="mb-6"><img src="${post.gif}" class="w-full rounded-xl border border-gray-200 dark:border-gray-800"></div>` : ''}
+
             <!-- Actions -->
             <div class="flex justify-between items-center py-4 border-t border-gray-100 dark:border-gray-800">
                  <div class="like-container relative">
